force-app/main/default/objects/dw_ecard_archive_ecard__x/dw_ecard_archive_ecard__x.object-meta.xml
<CustomObject>
    <description>dw_ecard_archive$ecard</description>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>dw_ecard_archive$ecard</externalName>
    <label>dw_ecard_archive$ecard</label>
    <pluralLabel>dw_ecard_archive$ecard</pluralLabel>
</CustomObject>