force-app/main/default/objects/dw_ecard_archive_ecard__x/fields/bus_relative_seq__c.field-meta.xml
<CustomField>
    <fullName>bus_relative_seq__c</fullName>
    <description>bus_relative_seq</description>
    <externalDeveloperName>bus_relative_seq</externalDeveloperName>
    <label>bus_relative_seq</label>
    <length>100</length>
    <type>Text</type>
</CustomField>