force-app/main/default/objects/dw_ecard_archive_ecard__x/fields/bustype_id__c.field-meta.xml
<CustomField>
    <fullName>bustype_id__c</fullName>
    <description>bustype_id</description>
    <externalDeveloperName>bustype_id</externalDeveloperName>
    <label>bustype_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>