force-app/main/default/objects/dw_ecard_archive_ecard__x/fields/chassis_image_url__c.field-meta.xml
<CustomField>
    <fullName>chassis_image_url__c</fullName>
    <description>chassis_image_url</description>
    <externalDeveloperName>chassis_image_url</externalDeveloperName>
    <label>chassis_image_url</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>