force-app/main/default/objects/dw_ecard_archive_ecard__x/fields/chassis_no__c.field-meta.xml
<CustomField>
    <fullName>chassis_no__c</fullName>
    <description>chassis_no</description>
    <externalDeveloperName>chassis_no</externalDeveloperName>
    <label>chassis_no</label>
    <length>200</length>
    <type>Text</type>
</CustomField>