force-app/main/default/objects/dw_ecard_archive_ecard__x/fields/coach_no__c.field-meta.xml
<CustomField>
    <fullName>coach_no__c</fullName>
    <description>coach_no</description>
    <externalDeveloperName>coach_no</externalDeveloperName>
    <label>coach_no</label>
    <length>200</length>
    <type>Text</type>
</CustomField>