force-app/main/default/objects/dw_ecard_archive_ecard__x/fields/coach_weight_unladen__c.field-meta.xml
<CustomField>
    <fullName>coach_weight_unladen__c</fullName>
    <description>coach_weight_unladen</description>
    <externalDeveloperName>coach_weight_unladen</externalDeveloperName>
    <label>coach_weight_unladen</label>
    <length>200</length>
    <type>Text</type>
</CustomField>