force-app/main/default/objects/dw_ecard_archive_ecard__x/fields/fleet_id__c.field-meta.xml
<CustomField>
    <fullName>fleet_id__c</fullName>
    <description>fleet_id</description>
    <externalDeveloperName>fleet_id</externalDeveloperName>
    <label>fleet_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>