force-app/main/default/objects/dw_ecard_archive_ecard__x/fields/front_axle_weight__c.field-meta.xml
<CustomField>
    <fullName>front_axle_weight__c</fullName>
    <description>front_axle_weight</description>
    <externalDeveloperName>front_axle_weight</externalDeveloperName>
    <label>front_axle_weight</label>
    <length>200</length>
    <type>Text</type>
</CustomField>