force-app/main/default/objects/dw_ecard_archive_ecard__x/fields/scheduled_delivery_date__c.field-meta.xml
<CustomField>
    <fullName>scheduled_delivery_date__c</fullName>
    <description>scheduled_delivery_date</description>
    <externalDeveloperName>scheduled_delivery_date</externalDeveloperName>
    <label>scheduled_delivery_date</label>
    <type>DateTime</type>
</CustomField>